Feat : 일기요약 API 스펙 변경
